estilos libros y talleres

--- a/pages/libros.html
+++ b/pages/libros.html
@@ -62,16 +62,15 @@
     </main>
     <section>
         <h2>Feria del libro</h2>
-        <p class="feria">La feria del libro es una herramienta importante para promover la lectura y la literatura, permitiendo el acceso a libros y la formación de lectores. Busca el desarrollo personal, comunitario y fomenta el valor de la lectura como una vía fundamental para el crecimiento y la adquisición de conocimiento. Todos los años asistimos a la feria del libro y adquirimos libros nuevos para mantener actualizada nuestra biblioteca.</p>
         <!-- imagen -->
-        <img src="../assets/books-5053733_1280.jpg" alt="Feria del libro">
+        <img src="../assets/books-5053733_1280.jpg" alt="Feria del libro" class="feria-img">
+        <p>La feria del libro es una herramienta importante para promover la lectura y la literatura, permitiendo el acceso a libros y la formación de lectores. Busca el desarrollo personal, comunitario y fomenta el valor de la lectura como una vía fundamental para el crecimiento y la adquisición de conocimiento. Todos los años asistimos a la feria del libro y adquirimos libros nuevos para mantener actualizada nuestra biblioteca.</p>
     </section>
     <section>
         <h2>Donaciones</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At velit iure itaque veniam, exercitationem eius blanditiis laborum doloremque voluptas deserunt beatae, praesentium consequatur alias eaque voluptates et possimus voluptatem sapiente. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae neque laboriosam! Deserunt iure ut ad laboriosam ratione aperiam dolores velit repellendus corrupti, <em>sunt at reiciendis repellat cupiditate quisquam quo. Lorem ipsum dolor sit amet consectetur adipisicing elit</em>. Repellat tempore in dignissimos nesciunt itaque, placeat est quod eum rerum laudantium ipsum, corporis illum culpa deleniti, magnam aliquam error cupiditate similique.</p>
         <!-- imagen -->
-        <img src="../assets/collection-of-old-books-3187708_1280.jpg" alt="Donaciones">
-
+        <img src="../assets/collection-of-old-books-3187708_1280.jpg" alt="Donaciones"  class="donaciones-img">
+        <p>La donación de libros es un acto que va más allá de la simple transferencia de papel y tinta. Es una contribución a la cultura, la educación y la sostenibilidad.Nuestra biblioteca recibe donaciones de socios, no socios y diversas entidades.</p>    
     </section>
     <div >
         <a href="https://www.whatsapp.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp btn-wpp" viewBox="0 0 14 19">
