--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -41,35 +41,34 @@
     </header>
     <main>
         <h1>Talleres</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint excepturi ipsam id minima dignissimos? Ratione quod voluptate non dicta facilis accusantium et nesciunt, debitis quos. Ipsum qui est quisquam assumenda.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quisquam quos accusamus nihil excepturi officia, blanditiis voluptates similique, voluptatem maxime doloribus numquam! Earum, enim culpa impedit sint sit possimus? Deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sit architecto ut hic aperiam quae impedit id repudiandae. Soluta beatae sed culpa natus facere aut nam cupiditate neque, id odio.
+        <p>Los talleres son algo más que reuniones interactivas. Son un espacio para que los grupos se reúnan en torno a un objetivo común, colaboren eficazmente y resuelvan problemas <em>Un buen taller puede crear innovación, conexión y transformación.</em>
         </p>
         <!--imagen -->
-        <img src="../assets/workshops-3527974_1280.jpg" alt="Talleres">
+        <img src="../assets/workshops-3527974_1280.jpg" alt="Talleres" class="talleres-img">
     </main>
     <section>
         <h2>Niños</h2>
         <ul>
-            <li>Talleres de lectura</li>
-            <li>Talleres de expresión corporal</li>
-            <li>Talleres de manualidades</li>
+            <li class="tipos-talleres">Talleres de lectura</li>
+            <li class="tipos-talleres">Talleres de expresión corporal</li>
+            <li class="tipos-talleres">Talleres de manualidades</li>
         </ul> 
     </section>
     <section>
         <h2>Adolescentes</h2>
         <ul>
-            <li>Talleres de lectura</li>
-            <li>Talleres de redes sociales</li>
-            <li>Talleres de moda urbana</li>
-            <li>Talleres de informática </li>
+            <li class="tipos-talleres">Talleres de lectura</li>
+            <li class="tipos-talleres">Talleres de redes sociales</li>
+            <li class="tipos-talleres">Talleres de moda urbana</li>
+            <li class="tipos-talleres">Talleres de informática </li>
         </ul>
     </section>
     <section>
         <h2>Adultos</h2>
         <ul>
-            <li>Talleres de lectura</li>
-            <li>Talleres de idiomas</li>
-            <li>Talleres de manualidades</li>
+            <li class="tipos-talleres">Talleres de lectura</li>
+            <li class="tipos-talleres">Talleres de idiomas</li>
+            <li class="tipos-talleres">Talleres de manualidades</li>
         </ul>
 
     </section>
