--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../assets/favicon-16x16.png">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Contacto</title>
@@ -44,7 +45,7 @@
             <div class="col-12">
                 <h1>Contacto</h1>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6" data-aos="flip-up" data-aos-easing="linear" data-aos-duration="1500">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1673.7935179159035!2d-68.84734126136631!3d-32.96191079339675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0ba5f302a7af%3A0xb6b54bc913b01a74!2sCafayate%20612%2C%20Luj%C3%A1n%20de%20Cuyo%2C%20Mendoza!5e0!3m2!1ses!2sar!4v1712606225138!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-sm-12 col-md-6">
@@ -93,5 +94,9 @@
         <p>Copyright 2024 Biblioteca Municipal. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
