--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../assets/favicon-16x16.png">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Talleres</title>
@@ -43,7 +44,7 @@
         <h1>Talleres</h1>
         <p>Los talleres son algo más que reuniones interactivas. Son un espacio para que los grupos se reúnan en torno a un objetivo común, colaboren eficazmente y resuelvan problemas <em>Un buen taller puede crear innovación, conexión y transformación.</em>
         </p>
-        <img src="../assets/workshops-3527974_1280.jpg" alt="Talleres" class="talleres-img">
+        <img src="../assets/workshops-3527974_1280.jpg" alt="Talleres" class="talleres-img" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500">
     </main>
     <section>
         <h2>Niños</h2>
@@ -100,5 +101,9 @@
         <p>Copyright 2024 Biblioteca Municipal. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
